[package]
name = "truchet"
version = "0.1.1"
edition = "2021"
description="Library for truchet tiling"
license="MIT"
homepage = "https://github.com/dima634/truchet"
repository = "https://github.com/dima634/truchet"
keywords = ["truchet", "image", "tiling", "image-processing"]
categories = ["multimedia::images"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = "0.13.0"
rand = "0.8.5"

[dev-dependencies]
image = "0.24.5"
